<resources>
    <string name="app_name">My Massanger</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="resistration">resistration</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="mail">mail</string>
    <string name="repassword">repassword</string>
</resources>
