<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginFr">

    <EditText
        android:id="@+id/et_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
         />
    <EditText
        android:layout_below="@+id/et_login"
        android:id="@+id/et_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        />
    <CheckBox
        android:id="@+id/chek_b"
        android:layout_below="@+id/et_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button

        android:id="@+id/btn_login"
        android:text="@string/login"
        android:backgroundTintMode="screen"
        android:layout_below="@+id/chek_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_toEndOf="@+id/btn_login"
        android:id="@+id/btn_pass"
        android:text="@string/resistration"
        android:backgroundTintMode="screen"
        android:layout_below="@+id/chek_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>